<resources>
    <string name="server_url">http://172.16.105.160:9090/DMDelivery/api/</string>
    <string name="app_name">DM Delivery</string>
    <string name="app_version">100</string>
    <string name="app_version_slip">1.0.0</string>
    <string name="app_version_text">โปรแกรมเป็นเวอร์ชั่นล่าสุด</string>
    <string name="app_update_version_text">Update Version</string>
    <string name="app_dev">-=@ Powered by IT @=-</string>
    <string name="app_name_dtl">DM DELIVERY 1.0.0(Beta1)</string>
    <string name="action_truck_no">ระบุเบอร์รถ</string>
    <string name="action_sign_in">เข้าสู่ระบบ</string>
    <string name="action_search">ค้นหา</string>
    <string name="action_ok">ตกลง</string>
    <string name="error_network">ไม่สามารถเชื่อมต่อ Internet ได้ กรุณาลองใหม่อีกครั้ง !!</string>
    <string name="error_webservice">ไม่สามารถเชื่อมต่อ Server ได้ กรุณาลองใหม่อีกครั้ง !!</string>
    <string name="error_truck_no_empty">กรุณาระบุเบอร์รถ !!</string>
    <string name="error_dc_no_empty">กรุณาระบุ ศูนย์ !!</string>
    <string name="error_dc_date_no_empty">กรุณาระบุ ศูนย์ และ วันที่จัดส่ง !!</string>
    <string name="error_date_no_empty">กรุณาระบุ วันที่จัดส่ง !!</string>
    <string name="error_truck_not_in_system">ไม่พบเบอร์รถในระบบ !!</string>
    <string name="error_data_not_in_system">ไม่พบข้อมูล !!</string>
    <string name="error_truck_not_data">ไม่พบเบอร์รถในระบบ !!</string>
    <string name="error_pincode_notsuccess">PIN CODE ไม่ถูกต้อง !!</string>
    <string name="error_pincode_success">PIN CODE ถูกต้อง !!</string>
    <string name="progress_refresh">กำลังโหลดข้อมูล ...</string>
    <string name="progress_loading">กำลังโหลดข้อมูล ...</string>
    <string name="progress_saving">กำลังบันทึกข้อมูล ...</string>
    <string name="progress_loading_forupdate">กำลังโหลดข้อมูลสำหรับติดตั้ง ...</string>
    <string name="btn_text_view_order">ค้นหา</string>
    <string name="btn_text_my_order">ตรวจสอบรายการจอง</string>
    <string name="btn_text_close">ปิด</string>
    <string name="btn_text_cancel">ยกเลิก</string>
    <string name="btn_text_save">จองออเดอร์</string>
    <string name="btn_text_confirm">ยืนยัน</string>
    <string name="btn_text_select">เลือกทุกออเดอร์</string>
    <string name="btn_text_noselect">ไม่เลือกทุกออเดอร์</string>
    <string name="btn_text_assign">กำหนดเบอร์รถ</string>
    <string name="btn_text_confirmselect">กำหนดการเลือก</string>
    <string name="btn_text_cancelconfirm">ยกเลิกการจอง</string>
    <string name="btn_dc_select">เลือก</string>
    <string name="btn_text_search">ระบุคำค้นหา</string>
    <string name="btn_text_scanorderscheck">ตรวจเช็คการแสกนสินค้า</string>
    <string name="btn_text_scanordersconfirm">ยืนยันสินค้าขึ้นรถจัดส่ง</string>
    <string name="txt_text_dc">ศูนย์ :</string>
    <string name="txt_text_status">สถานะ :</string>
    <string name="txt_text_mail_group">MAIL GROUP</string>
    <string name="txt_text_date">วันที่</string>
    <string name="txt_text_bdate">Booking Date</string>
    <string name="txt_text_ddate">วันที่จัดส่ง</string>
    <string name="txt_text_update_success">UPDATE SUCCESS !!</string>
    <string name="txt_text_load_data_success">โหลดข้อมูลเรียบร้อยแล้ว !!</string>
    <string name="txt_text_load_contacts_success">โหลดเบอร์โทรติดต่อ เรียบร้อยแล้ว !!</string>
    <string name="txt_text_close">ปิด</string>
    <string name="txt_text_save">จองออเดอร์</string>
    <string name="txt_text_cancel">ยกเลิกการจอง</string>
    <string name="txt_text_headder_search">ค้นหา</string>
    <string name="txt_text_headder_first">ค้นหาออเดอร์</string>
    <string name="txt_text_headder_confirm">ค้นหาการจอง</string>
    <string name="txt_text_headder_first_list">เลือกออเดอร์</string>
    <string name="txt_text_headder_first_truck_list">เลือกเบอร์รถ</string>
    <string name="txt_text_headder_dtl_first">เบอร์รถ :</string>
    <string name="txt_text_headder_dtl_ordercount">จำนวนออเดอร์ :</string>
    <string name="txt_text_headder_dtl_my">เบอร์รถ :</string>
    <string name="txt_text_headder_my">ค้นหารายการจอง</string>
    <string name="txt_text_headder_my_list">รายการจอง</string>
    <string name="txt_text_headder_scanorders_list">แสกนสินค้า</string>
    <string name="txt_text_headder_download_data">โหลดข้อมูล</string>
    <string name="txt_text_headder_unpack_list">สรุปรายการสินค้านอกกล่อง</string>
    <string name="txt_text_headder_returnsummary_list">สรุปสรุปรายการรับคืนสินค้า</string>
    <string name="txt_text_headder_delivery_list">จัดส่งสินค้า</string>
    <string name="txt_text_headder_tel_list">โหลดข้อมูลเบอร์ติดต่อ</string>
    <string name="txt_text_headder_update_program">อัพเดทโปรแกรม</string>
    <string name="txt_text_headder_saveorders_list">รอจัดส่งสินค้า</string>
    <string name="txt_text_headder_saveorders_complete_list">จัดส่งสินค้าแล้ว</string>
    <string name="txt_text_headder_saveorders_return_list">ใบรับคืนสินค้า</string>
    <string name="txt_text_headder_saveorders_return">รายการรับคืนสินค้า</string>
    <string name="txt_text_headder_saveorders_othermenu_list">เมนูอื่น</string>
    <string name="txt_text_headder_saveorders_slip">สลิปเซ็นต์รับ</string>
    <string name="txt_text_headder_saveorders_return_slip">สลิปเซ็นต์รับคืน</string>
    <string name="txt_text_headder_saveorders_slip_details">รายละเอียด</string>
    <string name="txt_text_headder_slip_return_list">สลิปรับคืนสินค้า</string>
    <string name="txt_text_headder_send_data">ส่งข้อมูล</string>
    <string name="txt_text_headder_check_map">ตำแหน่งปัจจุบัน</string>
    <string name="txt_text_headder_check_map_msl">ตำแหน่งสมาชิก</string>
    <string name="txt_text_remark">หมายเหตุ : </string>
    <string name="txt_text_reason_remark">เหตุผล/หมายเหตุ</string>
    <string name="txt_text_header_tel_download">เลือกโหลดเบอร์ติดต่อ</string>
    <string name="menu_text_headder_print">พิมพ์รายงาน</string>
    <string name="txt_text_order_count">จำนวนออเดอร์</string>
    <string name="txt_text_order_assigncount">เลือก</string>
    <string name="txt_text_carton_count">จำนวนกล่อง/ถุง</string>
    <string name="txt_text_tel">  โทรหาสมาชิก</string>
    <string name="txt_text_truck">เบอร์รถ</string>
    <string name="txt_text_notpincode">รหัสไม่ถูกต้อง !!</string>
    <string name="btn_text_ok">ตกลง</string>
    <string name="btn_text_ordercancel">ปิด</string>
    <string name="txt_text_confirmallselect">ยืนยันออเดอร์ที่เลือก</string>
    <string name="txt_text_cancelallselect">ยกเลิกออเดอร์ที่เลือก</string>
    <string name="txt_text_refresh">โหลดข้อมูลใหม่</string>
    <string name="txt_text_confirmcount">ยืนยัน : </string>
    <string name="txt_text_scancount">ตรวจสอบ :</string>
    <string name="txt_text_inmslcount">Intrsnsit to MSL :</string>
    <string name="txt_text_check_order">ตรวจสอบออเดอร์</string>
    <string name="menu_text_first_order">ค้นหาออเดอร์</string>
    <string name="menu_text_my_order">รายการจอง</string>
    <string name="menu_text_confirm_order">รายการยืนยัน</string>
    <string name="menu_text_check_order">ตรวจสอบ</string>
    <string name="menu_text_print_order">พิมพ์รายงาน</string>
    <string name="menu_text_logout">ออกจากระบบ</string>
    <string name="menu_text_msl_latlon_googlemap">พิกัดของสมาชิก (google map)</string>
    <string name="menu_text_msl_latlon_mapsme">พิกัดของสมาชิก (maps.me)</string>
    <string name="menu_text_msl_nav">นำทาง</string>
    <string name="menu_text_move_items">เรียงต่อจากรายการนี้</string>
    <string name="menu_text_manual">คู่มือ</string>
    <string name="menu_text_activety">กิจกรรม</string>
    <string name="dialog_text_title_confirm">ยืนยันการจองออเดอร์ ?</string>
    <string name="dialog_text_title_cancel">ยืนยันการยกเลิกการจองออเดอร์ ?</string>
    <string name="dialog_text_title_info">รายละเอียดออเดอร์</string>
    <string name="dialog_text_title_assign">กำหนดเบอร์รถ</string>
    <string name="dialog_text_title_cancelassign">กำหนดการเลือก</string>
    <string name="dialog_text_title_cancelconfirm">ยกเลิกการจอง</string>
    <string name="dialog_text_title_pincode">กรุณาระบุรหัสผ่าน</string>
    <string name="dialog_text_title_selectdc">เลือก DC</string>
    <string name="dialog_text_title_selectstatus">เลือก สถานะ</string>
    <string name="dialog_text_title_menu">เมนู</string>
    <string name="dialog_text_title_search">ค้นหา</string>
    <string name="btn_text_check">Check Order</string>
    <string name="btn_text_intransit">Intransit to MSL</string>
    <string name="btn_text_check_intransit">Check and Intransit</string>
    <string name="permission_request_message">กรุณาอนุญาตให้เราเข้าถึงคุณสมบัติของอุปกรณ์ของคุณ เพื่อให้การทำงานสมบูรณ์</string>
    <string name="permissions_all_denied_feedback">กรุณาอนุญาตให้เราเข้าถึงคุณสมบัติของอุปกรณ์ของคุณ</string>
    <string name="permission_request_title">DM Delivery ขออนุญาต...</string>
    <string name="menu_settings">ตั้งค่า</string>
    <string name="txt_text_headder_unpack">รายการ :</string>
    <string name="txt_text_headder_unpack_qty">จำนวนสินค้านอกกล่อง :</string>
    <string name="txt_text_header_checkscan">ลำดับ</string>
    <string name="txt_text_header_order">ออร์เดอร์</string>
    <string name="txt_text_header_orderall">ทั้งหมด</string>
    <string name="txt_text_header_orderscan">สแกน</string>
    <string name="txt_text_header_ordernotscan">ไม่สแกน</string>
    <string name="txt_text_unpack_size">ขนาดสินค้า</string>
    <string name="txt_text_unpack_weigth">ความกว้าง</string>
    <string name="txt_text_unpack_length">ความยาว</string>
    <string name="txt_text_unpack_heigth">ความสูง</string>
    <string name="menu_text_print_slip">สลิปเซ็นต์จัดส่ง</string>
    <string name="menu_text_save">ส่งได้</string>
    <string name="menu_text_notsave">ส่งไม่ได้</string>
    <string name="menu_text_lat">พิกัด</string>
    <string name="menu_text_unpack">นอกกล่อง</string>
    <string name="txt_text_scan_yes">สแกนสำเร็จ</string>
    <string name="txt_text_scan_no">ไม่สำเร็จ!!โปรดตรวจสินค้าที่สแกน</string>
    <string name="txt_text_scan_success">ยืนยันการสแกนสินค้าเรียบร้อยแล้ว !!</string>
    <string name="btn_text_load_data">โหลดข้อมูล</string>
    <string name="btn_text_update_program">อัพเดท</string>
    <string name="btn_text_logout">ออกจากระบบ</string>
    <string name="txt_text_no_gps">ไม่สามารถดึงข้อมูลตำแหน่งปัจจุบัน</string>
    <string name="txt_text_no_latlon">ไม่พบข้อมูลตำแหน่งสมาชิก</string>
    <string name="txt_text_not_call">ไม่สามารโทรออกเบอร์นี้ได้ !!!</string>
    <string name="txt_text_headder_activity">กิจกรรม</string>
    <string-array name="others_menu">
        <item>กิจกรรม</item>
        <item>หน้าจอเซ็นต์รับ</item>
        <item>ยกเลิกรายการที่เลือก</item>
        <item>พิกัดของสมาชิก maps.me</item>
        <item>พิกัดของสมาชิก Google Maps</item>
        <item>นำทาง</item>
        <item>โทรหา DSM เบอร์ที่ 1</item>
        <item>โทรหา DSM เบอร์ที่ 2</item>
        <item>โทรหาสมาชิก เบอร์ที่ 1</item>
        <item>โทรหาสมาชิก เบอร์ที่ 2</item>
        <item>วางสาย</item>
    </string-array>
    <string-array name="dcList">
        <item>ทั้งหมด</item>
        <item>BK-กรุงเทพมหานครและปริมณฑล</item>
        <item>CN-ภาคกลาง</item>
        <item>HY-หาดใหญ่</item>
        <item>KK-ขอนแก่น</item>
        <item>LP-ลำปาง</item>
        <item>NS-นครสวรรค์</item>
        <item>SR-สุรินทร์</item>
        <item>ST-สุราษฎร์ธานี</item>
    </string-array>
    <string-array name="returnList">
        
        
        
        
    </string-array>
    <string-array name="returnList2">
        
        
        
        
    </string-array>
</resources>