<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_root"
    android:weightSum="1"
    android:background="@drawable/background_dialog">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imvTitle"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Title"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize25" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBG"
            android:orientation="vertical">

            <include
                android:id="@+id/includeHeaderMenu"
                layout="@layout/toolbar_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:orientation="horizontal">-->

    <!--<TextView-->
    <!--android:id="@+id/textView10"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:text="TextView" />-->
    <!--</LinearLayout>-->


    <LinearLayout
        android:id="@+id/linearLayoutTruck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/shape_no_stroke"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_edittext"
                android:ems="10"
                android:hint="@string/txt_text_remark"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="6"
                android:textAlignment="textStart"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHintText"
                android:textSize="@dimen/textEdittextSize14"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="right">

                        <Button
                            android:id="@+id/btnok"
                            style="@style/btnok"
                            android:layout_width="120dp"
                            android:layout_height="35dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/btn_text_ok"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/textDialogSize" />




                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="right">

                        <!-- <Button
                             style="@style/btnmenuinactive"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:drawableTop="@mipmap/ic_save64"
                             android:text="@string/btn_text_confirm"
                             android:id="@+id/btnConfirm"
                             android:padding="8dp" />-->


                        <Button
                            android:id="@+id/btClose"
                            style="@style/btnclose"
                            android:layout_width="120dp"
                            android:layout_height="35dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/txt_text_close"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/textDialogSize" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>